change updating vehicle images from timer capture to manual capture.